# Projek-2

./: .gitignore  Cargo.toml  Plan.md  README.md  Skripsi_31998_DZAKI.docx  analysis_output.md  chat_transcript.md
.claude/: settings.local.json
crates/app/: Cargo.toml
crates/app/src/: main.rs
draft/: consultation_revision_log.md  daftar_pustaka_draft.md  defense_slides.md  defense_slides.pptx  defense_slides_v2.md  defense_slides_v2.pptx  defense_speaker_notes.md  faq_sidang.md  lampiran_draft.md  one_page_summary_penguji.docx  one_page_summary_penguji.html  one_page_summary_penguji.md  proposal_awal_outline.md  slides_outline.md  thesis_draft.docx  thesis_draft.html  thesis_draft.md
output/: ai_disclosure_index_template.csv  ai_disclosure_manual_sheet_interim.csv  ai_disclosure_manual_sheet_note.md  ai_disclosure_spotcheck_10pct.csv  ai_disclosure_spotcheck_note.md  assumption_tests.md  campus_repository_upload_checklist.md  canva_integration_note.md  canva_ready_manifest.md  correlation_matrix.csv  critical_blockers_report.md  cross_sectional_dependence.md  daily_collection_batch.md  daily_standup.md  data_cleaning_log.md  data_collection_availability_report.md  data_collection_checklist.md  data_collection_manifest_interim.md  data_collection_master_interim.csv  data_collection_master_status.csv  data_validation_interim.md  defense_revision_response_matrix.md  descriptive_stats.md  download_queue_ar.csv  download_queue_fs.csv  download_queue_price.csv  download_queue_summary.md  financial_master_template.csv  hipotesis.md  hypothesis_decision.md  (+50 more)
(+46 files in other folders)
